<resources>
    <string name="app_name">Diplom2</string>
    <string name="prog_name">SocialCar</string>
    <string name="prog_name_after">Register App</string>
    <string name="text_bottom">Войдите в свою учётную запись</string>
    <string name="send">Отправить</string>
    <string name="enter_message">Введите сообщение</string>
    <string name="comeback">назад</string>
    <string name="my_message">My message</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="pole_vvoda">Поле ввода</string>
    <string name="searchComments">Найти коментарии</string>
    <string name="EnterAutoNumber">Введите номер авто</string>
    <string name="todo">TODO</string>
</resources>