<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".Number">

    <RelativeLayout
        android:id="@+id/upper_bg"
        android:layout_width="match_parent"
        android:layout_height="110sp"
        android:background="@color/bg2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11sp"
            android:backgroundTint="@color/bg2"
            android:onClick="goNumber"
            android:text="@string/comeback"
            android:textSize="15sp"
            tools:ignore="UsingOnClickInXml" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_box"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:layout_below="@id/upper_bg"
        android:background="@color/white"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="-50sp">

        <EditText
            android:id="@+id/userNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="15sp"
            android:ems="10"
            android:hint="@string/EnterAutoNumber"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/search_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:layout_marginTop="60sp"
            android:backgroundTint="@color/purple_700"
            android:onClick="goComment"
            android:text="@string/searchComments"
            tools:ignore="UsingOnClickInXml" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messges_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_box"
        android:layout_above="@id/textLayout">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/send_message_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:clickable="true"
        android:src="@drawable/ic_send_button"
        android:tint="@color/bg2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:fabSize="mini"
        tools:ignore="RelativeOverlap"
        android:focusable="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/send_message_btn">

        <EditText
            android:id="@+id/message_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_message" />
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>